@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 27-07-2005 changed: Faster chroma upsampling for interlaced sources.
  - 27-07-2005 fixed: when a folder is added to a playlist via the web, its now added in the correct sorted order
  - 27-07-2005 enabled: support for the renderer to switch interlaced/progressive mode ona a frame to frame bases
  - 27-07-2005 changed: cleaned up the dll loader
